--- a/style.css
+++ b/style.css
@@ -59,30 +59,22 @@ textarea {
     background-color: rgb(209, 58, 176);
     font-size: 30px;
 }
-.button:hover {
-    background-color: rgb(209, 58, 176);
-}
-.button:focus {
-    background-color: rgb(209, 58, 176);
-    outline: none;
-}
-
 
 @media screen and (max-width: 1090px) {
     .card {
         margin-top: 100px;
     }
-    .btn {
+    .button {
         margin-top: 100px;
     }
 }
   
   @media screen and (max-width: 500px) {
-    .btn {
-      font-size: 1rem;
+    .button {
+      font-size: 10px;
       margin-top: 150px;
     }
     #password {
-        font-size: 1rem;
+        font-size: 10px;
     }
   }
